--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.1.0",
+    "config": "^3.2.5",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1"
   },
